--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
 OPENAI_API_KEY="783973291a7c4a74a1120133309860c0"
-AZURE_OPENAI_ENDPOINT="https://theswedes.openai.azure.com/"
-OPENAI_API_TYPE="azure"
-OPENAI_API_VERSION="2024-05-01-preview"
-ENDPOINT=" https://theswedes.openai.azure.com/openai"
+OPENAI_API_BASE="https://theswedes.openai.azure.com/"
